--- a/web/congratulation.html
+++ b/web/congratulation.html
@@ -35,10 +35,11 @@
     <div class="item">
       <img src="../images/DM_20231123181235_008.png" style="margin-left: 60%;">
       <div class="left-align-2">
-      <p>刚刚玩得还尽兴吗？和朋友们在一起真是太开心了。
-        跟大家聊天打趣的时候，时间总是过得很快。你看，月亮都出来啦~！
-        欸？你有礼物要送给我？已经在我头上了…？
-        是帕蒂沙兰！什么时候帮我戴上的，完、完全没发现…唔，怎么样，我戴着合适吗？</p>
+      <p>巧克力明明是一种甜食，尝起来却有苦涩的味道，我第一次吃的时候很不习惯呢。
+但是后来发现，经由苦涩对比后的甘甜，比起一般的甜，回味更加悠长。
+和跳舞一样，练习越辛苦，演出成功后会越开心。
+后来我就变得很喜欢吃巧克力，但是…嗯，也要更加注重身材管理了。
+不过你应该没有这种烦恼！所以请收下这些巧克力，也体会一下我所喜欢的这种甜蜜吧！</p>
       </div>
     </div>
     <div class="item">
