--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </div>
   </main>
   <footer>
-    <!-- <div class="right">
+    <div class="right">
         <p>华中科技大学计算机系2306——Leo</p>       
-    </div> -->
+    </div>
   </footer>
 </body>
 </html>
