--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </main>
   <footer>
     <div class="right">
-        <p>华中科技大学计算机系2306——Leo</p>       
+        <a href="https://leoncare1.github.io/dormitory_525.github.io/">返回寝室页</a>      
     </div>
   </footer>
 </body>
