--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </div>
   </main>
   <footer>
-    <div class="right">
-        <a href="https://leoncare1.github.io/dormitory_525.github.io/">返回寝室页</a>      
+    <div class="rp">
+        <a href="https://leoncare1.github.io/dormitory_525.github.io/"><p>返回寝室页</p></a>      
     </div>
   </footer>
 </body>
