--- a/web/skill.html
+++ b/web/skill.html
@@ -68,9 +68,9 @@
     </div>
   </main>
   <footer>
-    <!-- <div class="right">
-        <p>华中科技大学计算机系2306——Leo</p>       
-    </div> -->
+    <div class="rp">
+      <a href="https://leoncare1.github.io/dormitory_525.github.io/"><p>返回寝室页</p></a>      
+  </div>
   </footer>
 </body>
 </html>
