--- a/web/video.html
+++ b/web/video.html
@@ -34,6 +34,9 @@
     </div>
   </main>
   <footer>
+    <div class="rp">
+      <a href="https://leoncare1.github.io/dormitory_525.github.io/"><p>返回寝室页</p></a>      
+  </div>
   </footer>
 </body>
 </html>
