--- a/web/introduction.html
+++ b/web/introduction.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>莲光落舞筵——妮露</h1>
+    <a href="https://leoncare1.github.io/dormitory_525.github.io/"><h1>莲光落舞筵——妮露</h1></a>
     <div class="navbar">
         <a href="../index.html">首页</a>
         <a href="./introduction.html" >角色简介</a>
@@ -76,9 +76,9 @@
     </div>
   </main>
   <footer>
-    <div class="rp">
+    <!-- <div class="rp">
       <a href="https://leoncare1.github.io/dormitory_525.github.io/"><p>返回寝室页</p></a>      
-  </div>
+  </div> -->
   </footer>
 </body>
 </html>
